[package]
name = "pallet-evm"
version = "2.0.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME EVM contracts pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = "2.0.0" }
frame-system = { default-features = false, version = "2.0.0" }
pallet-timestamp = { default-features = false, version = "2.0.0" }
pallet-balances = { default-features = false, version = "2.0.0" }
sp-core = { default-features = false, version = "2.0.0" }
sp-runtime = { default-features = false, version = "2.0.0" }
sp-std = { default-features = false, version = "2.0.0" }
sp-io = { default-features = false, version = "2.0.0" }
sp-evm = { default-features = false, path = "../../rpc/primitives/evm" } 
primitive-types = { version = "0.7.0", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.4", default-features = false }
evm = { version = "0.18", default-features = false, features = ["with-codec"] }
evm-runtime = { version = "0.18", default-features = false }
evm-gasometer = { version = "0.18", default-features = false }
sha3 = { version = "0.8", default-features = false }
impl-trait-for-tuples = "0.1"
ripemd160 = { version = "0.9", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
	"sp-evm/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"evm/with-serde",
	"evm-runtime/std",
	"evm-gasometer/std",
	"pallet-timestamp/std",
	"ripemd160/std",
]
