[package]
name = "frontier-rpc-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io"]
edition = "2018"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"

[dependencies]
sp-core = { default-features = false, version = "2.0.0" } 
sp-api = { default-features = false, version = "2.0.0" } 
sp-evm = { default-features = false, path = "evm" } 
ethereum = { version = "0.4", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.9", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
sp-runtime = { default-features = false, version = "2.0.0" } 
sp-std = { default-features = false, version = "2.0.0" } 

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-api/std",
	"sp-evm/std",
	"ethereum/std",
	"ethereum-types/std",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
]
